nodeapp-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp
spec:
  type: NodePort
  selector:
    app: nodeapp
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30007
