nodeapp-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
spec:
  rules:
  - host: webnas.orbitax.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodeapp
            port:
              number: 80
